turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value setCouleurSol
    setCouleurSol(Color.white);baisseBrosse();leveBrosse()
    ^LangtonsAnt:6: error: not found: value setCouleurSol
    setCouleurSol(Color.black);baisseBrosse();leveBrosse()
    ^